Add redis cache

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,5 @@ MONGO_URL=mongodb://localhost:27019/admin?retryWrites=true&w=majority
 
 EASYWAY_API_PASS=password
 EASYWAY_API_USER=user
+
+REDIS_URL=redis://127.0.0.1:6479
