Setup redis cache (#4)
* Add redis cache

* Use google docker image

* Fix import

Co-authored-by: Myroslav Holyak <myroslav.holyak@leisure-group.eu>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
             MONGO_INITDB_ROOT_PASSWORD: ${MONGO_IMPORT_PASSWORD}
         ports:
             - "27019:27017"
+    redis:
+        image: marketplace.gcr.io/google/redis5
+        ports:
+            - "6479:6379"
 
 
 
