Use Redis labs free tier

--- a/.env.dist
+++ b/.env.dist
@@ -9,4 +9,4 @@ MONGO_URL=mongodb://localhost:27019/admin?retryWrites=true&w=majority
 EASYWAY_API_PASS=password
 EASYWAY_API_USER=user
 
-#REDIS_URL=redis://127.0.0.1:6479
+REDIS_URL=redis://127.0.0.1:6479
