--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "geodist": "^0.2.1",
     "gtfs": "^1.9.4",
     "gtfs-realtime-bindings": "0.0.5",
     "lodash": "^4.17.15",
