--- a/.env.dist
+++ b/.env.dist
@@ -6,7 +6,6 @@ MONGO_IMPORT_USER=gcp-importer
 MONGO_IMPORT_PASSWORD=password
 MONGO_URL=mongodb://localhost:27019/admin?retryWrites=true&w=majority
 
-EASYWAY_API_PASS=password
-EASYWAY_API_USER=user
-
 REDIS_URL=redis://127.0.0.1:6479
+
+TRIP_UDPDATES_URL=http://track.ua-gis.com/gtfs/lviv/trip_updates
