--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "dependencies": {
     "@google-cloud/functions-framework": "^1.6.0",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "geodist": "^0.2.1",
     "gtfs": "^1.10.2",
     "gtfs-realtime-bindings": "0.0.5",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.19",
+    "mongoose": "^5.9.20",
     "node-fetch": "^2.6.0",
     "npm-config": "^0.2.0",
     "redis": "^3.0.2",
