--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "mongoose": "^5.9.20",
     "node-fetch": "^2.6.0",
     "npm-config": "^0.2.0",
-    "redis": "^3.0.2",
-    "uuid": "^8.1.0"
+    "redis": "^3.0.2"
   },
   "devDependencies": {},
   "scripts": {
