--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "geodist": "^0.2.1",
-    "gtfs": "^1.10.4",
-    "gtfs-realtime-bindings": "0.0.5",
+    "gtfs": "^2.1.0",
+    "gtfs-realtime-bindings": "^0.0.5",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.9",
     "node-fetch": "^2.6.1",
