--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "geodist": "^0.2.1",
-    "gtfs": "^2.1.0",
+    "gtfs": "^2.2.4",
     "gtfs-realtime-bindings": "^0.0.5",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.9",
+    "lokijs": "^1.5.11",
+    "mongoose": "^5.11.9",
     "node-fetch": "^2.6.1",
     "npm-config": "^0.2.0",
     "redis": "^3.0.2"
