--- a/gtfs-import-config.json
+++ b/gtfs-import-config.json
@@ -5,7 +5,9 @@
       {
         "agency_key": "Microgiz",
         "url": "http://track.ua-gis.com/gtfs/lviv/static.zip",
-        "exclude": []
+        "exclude": [
+
+        ]
       }
     ]
 }
