Move GTFS from mongo to sqllite (#12)

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,8 @@ dist
 # vuepress build output
 .vuepress/dist
 
+.DS_Store
+
 # Serverless directories
 .serverless/
 
@@ -103,4 +105,4 @@ dist
 # TernJS port file
 .tern-port
 
-database
+database/*
