--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "geodist": "^0.2.1",
     "gtfs": "^2.4.4",
     "gtfs-realtime-bindings": "^0.0.5",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
-    "mongoose": "^5.13.13",
-    "node-fetch": "^2.6.6",
-    "npm-config": "^0.2.0"
+    "mongoose": "^5.13.14",
+    "node-fetch": "^2.6.7",
+    "npm-config": "^0.2.0",
+    "tar": ">=4.4.18"
   },
   "devDependencies": {},
   "scripts": {
