--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "API for lad.lviv.ua service",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^8.6.0",
+    "dotenv": "^16.0",
     "express": "^4.17.2",
     "geodist": "^0.2.1",
-    "gtfs": "^2.4.4",
-    "gtfs-realtime-bindings": "^0.0.5",
+    "gtfs": "^3.4.0",
+    "gtfs-realtime-bindings": "^0.0.6",
     "lodash": "^4.17.21",
     "lokijs": "^1.5.12",
     "mongoose": "^5.13.14",
