Upgrade gtfs & skip agencies

--- a/gtfs-import-config.json
+++ b/gtfs-import-config.json
@@ -6,7 +6,7 @@
         "agency_key": "Microgiz",
         "url": "http://track.ua-gis.com/gtfs/lviv/static.zip",
         "exclude": [
-
+          "agency"
         ]
       }
     ]
