--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,7 +29,7 @@ steps:
     id: Deploy
     entrypoint: gcloud
   - name: gcr.io/cloud-builders/curl
-    args: ['https://us-central1-timetable-252615.cloudfunctions.net/drop-cloudflare-cache','-s','--max-time','10']
+    args: ['https://drop-cloudflare-cache-1041251696619.us-central1.run.app','-s','--max-time','10']
 images:
   - '$_GCR_HOSTNAME/$PROJECT_ID/$REPO_NAME/$_SERVICE_NAME:$BRANCH_NAME'
 options:
